Overflow fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,7 @@ body {
         Helvetica,
         sans-serif;
     font-size: 1em;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 td,
